# qt-starter

./: .gitignore  CMakeLists.txt  README.md
QtStarter/src/: main.cpp
cmake/: ConfigureDeployment.cmake  DeduceBuildType.cmake  InstallationHelpers.cmake
